--- a/pages/templates/pages/page_update_form.html
+++ b/pages/templates/pages/page_update_form.html
@@ -13,11 +13,10 @@
                 <a href="{% url 'pages:page' page.id page.title|slugify %}">Click para ver el contenido</a>
             {% endif %}
             <form action="" method="post">{% csrf_token %}
-                <table>
-                    {{ form.as_table }}
-                </table>
-                <br>
-                <input type="submit" value="Actualizar página" />
+              {{ form.as_p }}
+                <div class='text-center'>
+                  <input type="submit" class='btn btn-primary btn-block' value="Actualizar página" />
+                </div>
             </form>
         </div>
       </div>
